refator and add deploy scripts

--- a/EmailSpamClassifier.ipynb
+++ b/EmailSpamClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "d9b51985-7cf4-4e4e-9c88-260c65a446ac",
    "metadata": {},
    "outputs": [],
@@ -1027,17 +1027,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "6349e90b-a416-4054-b04c-d2ddfdb01205",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the models directory if it doesn't exist\n",
+    "os.makedirs('models', exist_ok=True)\n",
+    "\n",
     "# Save the model to a .pkl file\n",
-    "with open('spam_classifier_model.pkl', 'wb') as model_file:\n",
+    "with open('models/spam_classifier_model.pkl', 'wb') as model_file:\n",
     "    pickle.dump(model, model_file)\n",
     "\n",
     "# Save the feature extractor to a .pkl file\n",
-    "with open('feature_extractor.pkl', 'wb') as extractor_file:\n",
+    "with open('models/feature_extractor.pkl', 'wb') as extractor_file:\n",
     "    pickle.dump(feature_extraction, extractor_file)"
    ]
   },
